# wishlist

./: .env  Cargo.toml  Dockerfile  README.md  base-dockerfile  compose.yaml  dev-dockerfile  devcontainer-dockerfile  docker-compose-base.yaml  docker-compose-dev.yaml
.dapr/: dapr-config-minimal.yaml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: publish-image.yaml  test-update-schema.yaml  update-infrastructure-docker.yaml  update-schema.yaml
schemas/: wishlist.graphql
src/: app_callback_service.rs  authentication.rs  base_connection.rs  books.rs  custom_uuid.rs  foreign_types.rs  http_event_service.rs  input_structs.rs  main.rs  mutation.rs  mutation_input_structs.rs  mutation_root.rs  order_datatypes.rs  product_variant_connection.rs  query.rs  query_root.rs  starwars.rs  user.rs  uuid_serde.rs  wishlist.rs  wishlist_connection.rs
src/starwars/: model.rs
