[package]
name = "misarch-wishlist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0.11", features = ["bson", "chrono", "uuid", "log"] }
async-graphql-axum = "6.0.11"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.6.0", features = ["headers", "macros"] }
mongodb = "2.8.0"
serde = "1.0.193"
futures = "0.3.30"
bson = "2.8.1"
clap = { version = "4.4.13", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
mongodb-cursor-pagination = "0.3.2"
json = "0.12.4"
log = "0.4.20"
simple_logger = "4.3.3"
serde_json = "1.0.113"